Flashing green artificats on website including animated elements on Adreno 330
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox88 | --- | fixed |
People
(Reporter: h.winnemoeller, Assigned: jnicol)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
WARNING RAPIDLY FLASHING IMAGES
Steps to reproduce
- Set
gfx.webrender.alltotrueand restart Fenix - Open any website with animated elements, e.g. https://github.com/mozilla-mobile/fenix/issues/2370
Expected results
Website is displayed normally.
Actual results
Website exhibits rapidly flashing green elements, see attached video (WARNING RAPIDLY FLASHING ELEMENTS).
Device Info
Vendor and Model: Sony Xperia Z2
OS version: Android 6.0.1
GPU model: Adreno 330 (WebRender Compositing)
Number of cores: 4 (Snapdragon 801)
Fenix version
Nightly 210301 12:11 (Build #2015796129)
AC: 74.0.20210227143138, 5437eb229
GV: 88.0a1-20210227094458
AS: 72.1.0
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
I wonder if this is due to a bug in the driver's partial present feature.
Henrik, could you try flipping gfx.webrender.allow-partial-present-buffer-age to false, restart (by swiping the app away in the app switcher) and see if that helps?
| Reporter | ||
Comment 2•5 years ago
•
|
||
(In reply to Jamie Nicol [:jnicol] from comment #1)
Henrik, could you try flipping
gfx.webrender.allow-partial-present-buffer-ageto false, restart (by swiping the app away in the app switcher) and see if that helps?
That actually helps, I do not see the artifacts anymore. (But performance suffers noticeably when the animated GIFs come into view on https://github.com/mozilla-mobile/fenix/issues/2370.) Update: Nevermind, it also does not perform well with setting gfx.webrender.allow-partial-present-buffer-age to true.
| Assignee | ||
Comment 3•5 years ago
|
||
But the flashing and green artefacts are completely gone? That's great news.
Would you mind filling a separate bug about the performance issue? And could you attach a profile using the "Firefox graphics" settings preset. Thanks!
| Reporter | ||
Comment 4•5 years ago
•
|
||
(In reply to Jamie Nicol [:jnicol] from comment #3)
But the flashing and green artefacts are completely gone? That's great news.
Yes, it's completely gone. Even on YouTube until it resets due to Bug 1507074. I'm seeing new issues when accessing some articles on bbc.com, will report that in a new issue, see Bug 1695912.
Would you mind filling a separate bug about the performance issue? And could you attach a profile using the "Firefox graphics" settings preset. Thanks!
Sure, will do! Should I then set gfx.webrender.allow-partial-present-buffer-age to false? It does not seem to make a difference in this specific case but just asking since this might become the default setting for this architecture?
| Assignee | ||
Comment 5•5 years ago
|
||
Yes, you might as well set and keep that as false, I will make that the default for Adreno 3xx. Thanks a lot for all the testing!
| Assignee | ||
Comment 6•5 years ago
|
||
It is buggy and causes rendering issues.
Updated•5 years ago
|
Comment 8•5 years ago
|
||
| bugherder | ||
Description
•