Bug 1695771 - Disable partial present on Adreno 3xx GPUs. r=aosmond

It is buggy and causes rendering issues.

Differential Revision: https://phabricator.services.mozilla.com/D107041